--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/normalize.css">   
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/mediaelementplayer.css">   
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -33,6 +34,7 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/plugin.js"></script>
+    <script src="js/mediaelementplayer.js"></script>
     <script src="js/scripts.js"></script>
     
 </body>
