--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     <h1>Jurassic Park</h1>
     
 <!--  Trailer for Movie  -->
-   <video>
+     <div id="trailer">
+        <video>
        <source src="video/trailer.mp4" type="video/mp4">
        <source src="video/trailer.webm" type="video/webm">
-   </video>
-   
+       </video>
+   </div>
     
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
